payment: fix race condition in on-the-fly Janitor
When running the on-the-fly Janitor while the onSuccessCalls of the
initial payment control state machine haven't finished running yet,
the plugin properties could have been wiped.

Signed-off-by: Pierre-Alexandre Meyer <pierre@mouraf.org>